[package]
name = "invalidator"
version = "0.1.0"
authors = ["Abhijat Malviya <malviya.abhijat@gmail.com>"]
edition = "2018"

[dependencies]
bit-vec = "0.5.0"
fasthash = "0.3"
rand = "0.6.1"
simplelog = "^0.5.0"
log = "0.4.6"
actix-web = "0.7"
actix = "0.7"
serde = "^1.0.0"
serde_json = "^1.0.0"
serde_derive = "^1.0.0"
futures = "0.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "bloom_filter"
path = "src/lib.rs"

[[bin]]
name = "invalidator"
path = "src/main.rs"
